# MyFastApiProject

./: crud.py  main.py  pyproject.toml
alembic/versions/: 2024_03_23_0612-81c1688b6ac8_create_product_table.py  2024_03_24_1630-e913720d3f80_create_users_table.py  2024_03_24_1642-087360950e14_create_posts_table.py  2024_03_25_1846-87620ab0ef0c_create_profile_table.py  2024_03_26_1125-3c487e6cbbc0_create_profile_table.py  2024_03_27_1746-82d89a6cbd43_create_orders_table.py  2024_03_28_2105-98d9aa8aa200_create_order_product_assotiation_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
