[tool.poetry]
name = "myfastapiproject"
version = "0.1.0"
description = ""
authors = ["stepashkacs <cociorvastefan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = {extras = ["email"], version = "^2.6.4"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
